# eyecommunicator-cepred

./: CMakeLists.txt  baseeyetrackerplugin.hpp  basetrackingcalibrationwidget.hpp  eyecommunicator-cepred.pro  eyesposition.hpp  eyetracker.cpp  eyetracker.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  memorygame.cpp  memorygame.h  memorygame.ui  pluginconfigdialog.cpp  pluginconfigdialog.hpp  pluginconfigdialog.ui  rndtableview.cpp  rndtableview.h  rndtableview.ui  table.cpp  table.h  tableview.cpp  tableview.h  tableview.ui
dummyeyetrackerplugin/: dummyeyetrackerplugin.cpp  dummyeyetrackerplugin.hpp  dummyeyetrackerplugin.pro  dummytrackingcalibrationwidget.cpp  dummytrackingcalibrationwidget.hpp
plugins/: CMakeLists.txt
plugins/dummyeyetrackerplugin/: CMakeLists.txt  dummyeyetrackerplugin.cpp  dummyeyetrackerplugin.hpp  dummyeyetrackerplugin.json  dummytrackingcalibrationwidget.hpp  dummytrackingcalibrationwidget.ui
plugins/eyetribeeyetrackerplugin/: CMakeLists.txt  eyetribeeyetrackerplugin.cpp  eyetribeeyetrackerplugin.hpp  eyetribeeyetrackerplugin.json
plugins/gazepointeyetrackerplugin/: CMakeLists.txt  gazepointeyetrackerplugin.cpp  gazepointeyetrackerplugin.hpp  gazepointeyetrackerplugin.json
